tests/ltests/compile-fail/typecheck/generics/incorrect_number_of_generic_args_inherent_impl.l
enum Enum<T> {
}

fn main() -> int { 0 }

impl Enum {} //~ ERROR expected 1 generic parameter but received 0

